[gd_scene load_steps=6 format=3 uid="uid://semj4pm66hug"]

[ext_resource type="Script" uid="uid://dag4ibqvauxnb" path="res://Scripts/player/Player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://ccrn6c1simmu2" path="res://assets/textures/fpass/UI/pointer.png" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://b8j26prnm8pfy" path="res://Scripts/Menus/Menu3d.tscn" id="3_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yyub0"]
height = 1.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0hq0q"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="head" type="Node3D" parent="neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="Camera3D" type="Camera3D" parent="neck/head"]

[node name="look_target" type="RayCast3D" parent="neck/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -5, 0)

[node name="action_target" type="RayCast3D" parent="neck/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="TextureRect" type="TextureRect" parent="neck/head/Camera3D"]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_g2els")

[node name="Menu3d" parent="neck/head" instance=ExtResource("3_qhqgy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="standing_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0)
shape = SubResource("CapsuleShape3D_yyub0")

[node name="crouch_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_0hq0q")
disabled = true

[node name="can_stand" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
